--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "motion-v": "^1.10.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
