--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "@vitejs/plugin-vue": "^5.2.1",
+    "tailwindcss": "^4.1.18",
     "vite": "^6.0.5"
   }
 }
